--- a/src/app/sitemap/sitemap.component.html
+++ b/src/app/sitemap/sitemap.component.html
@@ -1,7 +1,7 @@
 <div id="gcontainer">
   <h1 class="mat-h1">Site maps</h1>
 
-  <mat-accordion>
+  <mat-accordion multi="true">
     <mat-expansion-panel>
       <mat-expansion-panel-header>
         <mat-panel-title>
