--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -8,65 +8,46 @@
           </mat-card-title>
         </mat-card-header>
         <mat-card-content class="dashboard-card-content" >
-          <div fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="left">
-              <div style="padding: 10px;">
+          <div fxLayout="column" fxLayout.xs="column" fxLayoutGap="0.5%" fxLayoutAlign="left">
+              <div id="d3container" fxFlex="1 0 100%">
+                <svg id="d3target"  height="500" attr.width.px="{{dyn_width}}">
+                  <text x="20" y="250"
+                        font-family="Roboto"
+                        font-size="30">
+                    Ici image/fresque illustrative du projet
+                  </text>
+                </svg>
+              </div>
+
+              <div style="padding: 10px;" fxFlex="1 1 auto">
                 Our project is a general purpose bacterial platform for drug degradation. We choose to focus on
                 cytotoxic anticancer drugs as proof of concept, as their concentrations are alarmingly high in
                 hospital wastewater effluent. Through a toolkit of broad- and narrow-spectrum enzymes, we aim to
                 achieve clearance of the main chemotherapeutic agents, like methotrexate, 5-fluorouracil or
                 doxorubicin.
+                <br>
+                We are taking on three main challenges : efficient entry of these molecule into the cell, through channels
+                and transporters (uracil-like transporter uraA, cryptic folate-analogue transporter abgT ...), proper
+                degradation through metabolizing enzymes (carboxypeptidase G2, cytochrome P450 …), and long term operation
+                of the bioreactor, though a bistable, “stem-cell like” population of bacteria, alleviating the need for
+                regular reseeding with fresh clones.
+                <br>
+                <h3>Project significance</h3>
+                Pharmaceutical drugs are a particularly concs ning source of pollution : selected to be biologically active
+                at low concentration & designed to resist biodegradation, drugs constitute a class of high remanence pollutants
+                that is routinely found in the environment, even in our drinking water.
+                <br>
+                Though physical & chemical solution exist, in the form of ozone and UV treatment, our solution can offer
+                the flexibility and efficiency of a bioreactor-based approach.
+                <br>
+                Our stem-cell like approach to bacterial population makes it an option with potentially lower ongoing costs,
+                and our degradation enzymes allow targeted degradation of particularly resilient molecules : both weaknesses
+                of conventional methods of wastewater treatment.
+
               </div>
-              <img style="width: auto;height: 230px;padding: 10px;" src="assets/mtx_elim.png"/>
-          </div>
-
-
-
-      <mat-card class="dashboard-card" style="float: right;width: 30%;margin-top:20px">
-        <mat-card-header>
-          <mat-card-title>
-            Our Team
-          </mat-card-title>
-        </mat-card-header>
-        <mat-card-content class="dashboard-card-content">
-          <div>
-
-            <mat-accordion multi="true">
-              <mat-expansion-panel>
-                <mat-expansion-panel-header>
-                  <mat-panel-title>
-                    John Smith
-                  </mat-panel-title>
-                  <mat-panel-description>
-                    CEO of MeThriX
-                  </mat-panel-description>
-                </mat-expansion-panel-header>
-                <div fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="left">
-                  <div style="max-width: 30%;max-height: 100%;margin : 10px;">
-                    <img src="assets/ceo.jpg" style="max-width: 100%;max-height: 100%"/>
-                  </div>
-                  <div style="padding: 10px;">
-                    I am the CEO. I run things you know !
-                  </div>
-                </div>
-              </mat-expansion-panel>
-
-
-              <mat-expansion-panel>
-                <mat-expansion-panel-header>
-                  <mat-panel-title>
-                    Jean Dupont
-                  </mat-panel-title>
-                  <mat-panel-description>
-                    Low-level team member
-                  </mat-panel-description>
-                </mat-expansion-panel-header>
-                <p>Huh, what's IGEM ?</p>
-              </mat-expansion-panel>
-            </mat-accordion>
 
           </div>
-        </mat-card-content>
-      </mat-card>
+
 
 
         </mat-card-content>
