--- a/src/gops_theme.scss
+++ b/src/gops_theme.scss
@@ -1,4 +1,4 @@
-@import '~@angular/material/theming';
+@import '../node_modules/@angular/material/theming';
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -6,19 +6,118 @@
 // Be sure that you only ever include this mixin once!
 @include mat-core();
 
+$md-parissaclay-primary: (
+  50 : #ece0e8,
+  100 : #d0b3c5,
+  200 : #b1809e,
+  300 : #914d77,
+  400 : #7a2659,
+  500 : #62003c,
+  600 : #5a0036,
+  700 : #50002e,
+  800 : #460027,
+  900 : #34001a,
+  A100 : #ff6ca4,
+  A200 : #ff3984,
+  A400 : #ff0664,
+  A700 : #eb0059,
+  contrast: (
+    50 : #000000,
+    100 : #000000,
+    200 : #000000,
+    300 : #ffffff,
+    400 : #ffffff,
+    500 : #ffffff,
+    600 : #ffffff,
+    700 : #ffffff,
+    800 : #ffffff,
+    900 : #ffffff,
+    A100 : #000000,
+    A200 : #ffffff,
+    A400 : #ffffff,
+    A700 : #ffffff,
+  )
+);
+
+
+$md-parissaclay-secondary : (
+  50 : #f2e4ec,
+  100 : #e0bcd1,
+  200 : #cb8fb2,
+  300 : #b66293,
+  400 : #a6407b,
+  500 : #961e64,
+  600 : #8e1a5c,
+  700 : #831652,
+  800 : #791248,
+  900 : #680a36,
+  A100 : #ff9ac5,
+  A200 : #ff67a7,
+  A400 : #ff348a,
+  A700 : #ff1a7b,
+  contrast: (
+    50 : #000000,
+    100 : #000000,
+    200 : #000000,
+    300 : #000000,
+    400 : #ffffff,
+    500 : #ffffff,
+    600 : #ffffff,
+    700 : #ffffff,
+    800 : #ffffff,
+    900 : #ffffff,
+    A100 : #000000,
+    A200 : #000000,
+    A400 : #ffffff,
+    A700 : #ffffff,
+  )
+);
+
+
+
+
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$candy-app-primary: mat-palette($mat-indigo);
-$candy-app-accent:  mat-palette($mat-pink, A200, A100, A400);
+$gops-app-primary: mat-palette($md-parissaclay-primary);
+$gops-app-accent:  mat-palette($md-parissaclay-secondary);
 
 // The warn palette is optional (defaults to red).
-$candy-app-warn:    mat-palette($mat-red);
+$gops-app-warn:    mat-palette($mat-deep-orange, A200);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
+$gops-app-theme: mat-light-theme($gops-app-primary, $gops-app-accent, $gops-app-warn);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($candy-app-theme);
+@include angular-material-theme($gops-app-theme);
+
+
+#HQ_page h2{
+  @extend .mat-title;
+  background-color: #7a2659;
+  color: #ffffff;
+  background-size: 100% auto;
+}
+
+#HQ_page #toctitle h2{
+  @extend .mat-subheading-2;
+  background-color: unset;
+  color: unset;
+  background-size: 100% auto;
+}
+
+
+#HQ_page h3{
+  @extend .mat-title;
+}
+
+#HQ_page h4{
+  @extend .mat-subheading-2;
+}
+
+#HQ_page p{
+  @extend .mat-body-1;
+}
+
