--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -8,18 +8,57 @@
           </mat-card-title>
         </mat-card-header>
         <mat-card-content class="dashboard-card-content" >
-          <div fxLayout="column" fxLayout.xs="column" fxLayoutGap="0.5%" fxLayoutAlign="left">
-              <div id="d3container" fxFlex="1 0 100%">
-                <svg id="d3target"  height="500" attr.width.px="{{dyn_width}}">
-                  <text x="20" y="250"
-                        font-family="Roboto"
-                        font-size="30">
-                    Ici image/fresque illustrative du projet
-                  </text>
+          <div>
+              <div id="d3container" style="margin: auto;">
+                <svg id="d3target"  height="500" width="674" style="display: block;margin: auto;">
+                  <g transform="translate(20,100)">
+                    <text font-size="30" text-anchor="middle" transform="translate(70,-20)">MTX</text>
+                    <text font-size="15" text-anchor="middle" transform="translate(70,-5)">Hospital effluents</text>
+                    <g id="d3inputgauge" style="height: 150px;width: 150px;" ></g>
+                  </g>
+                  <rect x="0" y="270" width="675" height="50" style="fill: transparent; stroke: #5a0036FF; stroke-width: 5px"></rect>
+                  <rect x="250" y="200" width="150" height="150" style="fill: transparent; stroke: #5a0036FF; stroke-width: 5px;"></rect>
+                  <rect x="0" y="270" width="675" height="50" style="fill: url('#animate-gradient');"></rect>
+                  <rect x="250" y="200" width="150" height="150" style="fill: url('#animate-gradient');"></rect>
+                  <rect x="250" y="200" width="150" height="150" style="fill: url('#animate-gradient');"></rect>
+
+
+                  <g transform="translate(470,100)">
+                    <text font-size="30" text-anchor="middle" transform="translate(70,-20)">MTX</text>
+                    <text font-size="15" text-anchor="middle" transform="translate(70,-5)">Wastewater output</text>
+                    <g id="d3outgauge" style="height: 150px;width: 150px;" ></g>
+                  </g>
+
+                  <g transform="translate(180,20)">
+                    <text font-size="15" text-anchor="middle" transform="translate(145,163)">Bacterial population</text>
+                    <text font-size="10" text-anchor="middle" transform="translate(145,175)">Bimodal distribution</text>
+                    <g id="d3bimodal" ></g>
+                  </g>
+                  <!--
+                  <g id="inventory-cycle">
+                  </g>
+
+                  <g id="point-1">
+                    <rect class="first-point-rect" x="200" y="133.4" width="100" height="100"/>
+                    <text class="label" transform="matrix(1 0 0 1 200.4859 297.0509)">point 1</text>
+                  </g>
+
+                  <g id="point-2">
+                    <rect class="later-points-rect" x="392.1" y="429.2" width="38" height="144" transform="matrix(0.7071 -0.7071 0.7071 0.7071 -233.9965 437.497)"/>
+                    <text class="label" transform="matrix(0.7 -0.7 0.7 0.7 341 458)">point 2</text>
+                  </g>
+
+                  <g id="point-3">
+                    <rect class="later-points-rect" x="269" y="480.2" width="38" height="144"/>
+                    <text class="label" transform="matrix(1 0 0 1 269 472.3668)">point 3</text>
+                  </g>
+
+-->
                 </svg>
+
               </div>
 
-              <div style="padding: 10px;" fxFlex="1 1 auto">
+              <div style="padding: 10px;">
                 Our project is a general purpose bacterial platform for drug degradation. We choose to focus on
                 cytotoxic anticancer drugs as proof of concept, as their concentrations are alarmingly high in
                 hospital wastewater effluent. Through a toolkit of broad- and narrow-spectrum enzymes, we aim to
