pre universal - module/chunk separation achieved

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,7 @@
       <a mat-list-item  [routerLink]="['../team']"><mat-icon>people</mat-icon> Our team</a>
       <a mat-list-item  [routerLink]="['../support']"><mat-icon>folder_special</mat-icon> Support</a>
       <a mat-list-item  [routerLink]="['../wiki-lp']" style="background-color: #a6407b0F"><mat-icon>desktop_windows</mat-icon> Wiki Proxy <sup>(dev)</sup></a>
+      <a mat-list-item  [routerLink]="['../lazytest']" style="background-color: #a6407b0F"><mat-icon>desktop_windows</mat-icon> Lazy <sup>(dev)</sup></a>
 
       <a mat-list-item [routerLink]="['../sitemap']" id="sitemapbut"><mat-icon>apps</mat-icon> Site map</a>
     </mat-nav-list>
