--- a/src/app/team-roster/team-roster.component.html
+++ b/src/app/team-roster/team-roster.component.html
@@ -1,49 +1,18 @@
 <div class="grid-container">
   <h1 class="mat-h1">Our team</h1>
 
-  <mat-card class="dashboard-card" >
+  <mat-card class="dashboard-card">
+    <div fxLayout="row wrap" fxLayout.xs="column" fxLayoutAlign="center stretch">
+          <mat-card *ngFor="let member of membersList"  fxFlex="1 1" class="member-card">
 
-    <mat-accordion multi="true">
-      <mat-expansion-panel [expanded]="firstPanelOpen">
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            John Smith
-          </mat-panel-title>
-          <mat-panel-description>
-            CEO of MeThriX
-          </mat-panel-description>
-        </mat-expansion-panel-header>
-        <div fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="left">
-          <div style="max-width: 30%;max-height: 100%;margin : 10px;">
-            <img src="assets/ceo.jpg" style="max-width: 100%;max-height: 100%"/>
-          </div>
-          <div style="padding: 10px;">
-            I am the CEO. I run things you know !
-          </div>
-        </div>
-      </mat-expansion-panel>
-
-
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            Jean Dupont
-          </mat-panel-title>
-          <mat-panel-description>
-            Overworked team member
-          </mat-panel-description>
-        </mat-expansion-panel-header>
-        <div fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="left">
-          <div style="max-width: 30%;max-height: 100%;margin : 10px;">
-            <img src="assets/tired.jpg" style="max-width: 100%;max-height: 100%"/>
-          </div>
-          <div style="padding: 10px;">
-            Huh, what's IGEM ?
-          </div>
-        </div>
-      </mat-expansion-panel>
-    </mat-accordion>
-
-
-</mat-card>
+            <img src="{{member.img_src}}" style="width: 200px;"><br>
+            <div class="member-name">
+            {{member.name}}
+            </div>
+            <div class="member-bio">
+              {{member.bio}}
+            </div>
+          </mat-card>
+    </div>
+  </mat-card>
 </div>
