--- a/src/gops_theme.scss
+++ b/src/gops_theme.scss
@@ -182,3 +182,7 @@ $gops-app-theme: mat-light-theme($gops-app-primary, $gops-app-accent, $gops-app-
   -moz-font-feature-settings: 'liga';
   -moz-osx-font-smoothing: grayscale;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  border-bottom: 0px;
+}
