--- a/src/app/team-roster/team-roster.component.css
+++ b/src/app/team-roster/team-roster.component.css
@@ -17,6 +17,7 @@
 
 .member-name {
   font-weight: bold;
+  font-size: 1.5em;
   padding-top: 0.2em;
   padding-bottom: 0.2em;
 }
@@ -28,5 +29,41 @@
 
 .member-card {
   margin: 0.2em 0.2em 0.2em 0.2em;
-  max-width: 240px;
+  /* max-width: 240px; */
+  width: 240px;
+}
+
+.seemorebutton-container {
+
+
+}
+
+.seemorebutton {
+  width: 100%;
+  height: 20px;
+  line-height: 20px;
+  min-height: 20px;
+  vertical-align: top;
+  font-size: 10px;
+  padding: 0 0;
+  margin: 0;
+}
+
+.additional-info {
+  margin-top : 1em;
+  font-size : 11pt;
+}
+
+.cardcontent {
+}
+
+.seelessbutton {
+  width: 100%;
+  height: 20px;
+  line-height: 20px;
+  min-height: 20px;
+  vertical-align: top;
+  font-size: 10px;
+  padding: 0 0;
+  margin: 0;
 }
