--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,15 +24,14 @@
     [opened]="openedSideNav">
     <mat-toolbar style="margin-top: 15px;" color="primary">Navigation  <span class="fill-toolbar-space"></span><button mat-icon-button (click)="openSideNav()"><mat-icon>keyboard_arrow_left</mat-icon></button></mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item  [routerLink]="['../dashboard']"><mat-icon>dashboard</mat-icon> Main page</a>
-      <a mat-list-item  [routerLink]="['../project']"><mat-icon>assessment</mat-icon> Project details</a>
-      <a mat-list-item  [routerLink]="['../biology']"><mat-icon>blur_circular</mat-icon> Biology</a>
+      <a mat-list-item (click)="routerLinkChunkProcessing('/dashboard')" ><mat-icon>dashboard</mat-icon> Main page</a>
+      <a mat-list-item (click)="routerLinkChunkProcessing('/project')" ><mat-icon>assessment</mat-icon> Project details</a>
+      <a mat-list-item (click)="routerLinkChunkProcessing('/biology')" ><mat-icon>blur_circular</mat-icon> Biology</a>
       <a mat-list-item  [routerLink]="['../computing']"><mat-icon>memory</mat-icon> Computing</a>
       <a mat-list-item  [routerLink]="['../human-practices']"><mat-icon>accessibility_new</mat-icon> Human Practices</a>
       <a mat-list-item  [routerLink]="['../team']"><mat-icon>people</mat-icon> Our team</a>
       <a mat-list-item  [routerLink]="['../support']"><mat-icon>folder_special</mat-icon> Support</a>
       <a mat-list-item  [routerLink]="['../wiki-lp']" style="background-color: #a6407b0F"><mat-icon>desktop_windows</mat-icon> Wiki Proxy <sup>(dev)</sup></a>
-      <a mat-list-item  [routerLink]="['../sl']" style="background-color: #a6407b0F"><mat-icon>desktop_windows</mat-icon> Lazy <sup>(dev)</sup></a>
 
       <a mat-list-item [routerLink]="['../sitemap']" id="sitemapbut"><mat-icon>apps</mat-icon> Site map</a>
     </mat-nav-list>
