--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
       <a mat-list-item  [routerLink]="['../human-practices']"><mat-icon>accessibility_new</mat-icon> Human Practices</a>
       <a mat-list-item  [routerLink]="['../team']"><mat-icon>people</mat-icon> Our team</a>
       <a mat-list-item  [routerLink]="['../support']"><mat-icon>folder_special</mat-icon> Support</a>
-      <a mat-list-item  [routerLink]="['../wiki-lp']" style="background-color: #a6407b0F"><mat-icon>desktop_windows</mat-icon> Wiki Proxy <sup>(dev)</sup></a>
+      <a mat-list-item  [routerLink]="['../labnotebook']"><mat-icon>book</mat-icon>Lab Notebook</a>
 
       <a mat-list-item [routerLink]="['../sitemap']" id="sitemapbut"><mat-icon>apps</mat-icon> Site map</a>
     </mat-nav-list>
