--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -59,27 +59,31 @@
               </div>
 
               <div style="padding: 10px;">
-                Our project is a general purpose bacterial platform for drug degradation. We choose to focus on
-                cytotoxic anticancer drugs as proof of concept, as their concentrations are alarmingly high in
-                hospital wastewater effluent. Through a toolkit of broad- and narrow-spectrum enzymes, we aim to
+                Our project is a general-purpose bacterial platform for drug degradation. As a proof of concept, we have
+                chosen to focus on
+                the cytotoxic drugs used in the treatment of cancer, as their concentrations are alarmingly high in
+                hospital wastewater effluents. Through a toolkit of broad- and narrow-spectrum enzymes, we aim to
                 achieve clearance of the main chemotherapeutic agents, like methotrexate, 5-fluorouracil or
                 doxorubicin.
                 <br>
-                We are taking on three main challenges : efficient entry of these molecule into the cell, through channels
+                <br>
+                We are taking on three main challenges : efficient entry of these molecules in the bacterial cell, through channels
                 and transporters (uracil-like transporter uraA, cryptic folate-analogue transporter abgT ...), proper
                 degradation through metabolizing enzymes (carboxypeptidase G2, cytochrome P450 …), and long term operation
-                of the bioreactor, though a bistable, “stem-cell like” population of bacteria, alleviating the need for
+                of the bioreactor though a bistable, "stem-cell like", population of bacteria, alleviating the need for
                 regular reseeding with fresh clones.
                 <br>
                 <h3>Project significance</h3>
-                Pharmaceutical drugs are a particularly concs ning source of pollution : selected to be biologically active
+                Pharmaceutical drugs are a particularly concerning source of pollution : selected to be biologically active
                 at low concentration & designed to resist biodegradation, drugs constitute a class of high remanence pollutants
-                that is routinely found in the environment, even in our drinking water.
+                routinely found in the environment, even in our drinking water.
                 <br>
-                Though physical & chemical solution exist, in the form of ozone and UV treatment, our solution can offer
+                <br>
+                Though physical & chemical solutions exist, in the form of ozone and UV treatment, our solution can offer
                 the flexibility and efficiency of a bioreactor-based approach.
                 <br>
-                Our stem-cell like approach to bacterial population makes it an option with potentially lower ongoing costs,
+                <br>
+                Our "stem-cell like" approach to bacterial population makes it an option with potentially lower ongoing costs,
                 and our degradation enzymes allow targeted degradation of particularly resilient molecules : both weaknesses
                 of conventional methods of wastewater treatment.
 
