--- a/src/app/collaborations/collaborations.component.html
+++ b/src/app/collaborations/collaborations.component.html
@@ -1,5 +1,5 @@
 <div class="grid-container">
-  <h1 class="mat-h1">Project Design</h1>
+  <h1 class="mat-h1">Collaborations</h1>
 
   <mat-card class="dashboard-card" >
 
