--- a/src/app/computing-section/computing-section.component.html
+++ b/src/app/computing-section/computing-section.component.html
@@ -1,5 +1,5 @@
 <div class="grid-container">
-  <h1 class="mat-h1">Modeling & Software</h1>
+  <h1 class="mat-h1">Software</h1>
 
   <mat-card class="dashboard-card" >
 
