--- a/src/app/support-section/support-section.component.html
+++ b/src/app/support-section/support-section.component.html
@@ -1,5 +1,5 @@
 <div class="grid-container">
-  <h1 class="mat-h1">Support, Sponsors & Attribution</h1>
+  <h1 class="mat-h1">Sponsors & Support</h1>
 
   <mat-card class="dashboard-card">
 
