--- a/src/gops_theme.css
+++ b/src/gops_theme.css
@@ -2,6 +2,8 @@
  * Applies styles for users in high contrast mode. Note that this only applies
  * to Microsoft browsers. Chrome can be included by checking for the `html[hc]`
  * attribute, however Chrome handles high contrast differently.
+ * @param target Which kind of high contrast setting to target. Defaults to `active`, can be
+ *    `white-on-black` or `black-on-white`.
  */
 /* Theme for the ripple elements.*/
 /* stylelint-disable material/no-prefixes */
@@ -322,9 +324,6 @@
 
 .mat-form-field-appearance-outline .mat-form-field-infix {
   padding: 1em 0 1em 0; }
-
-.mat-form-field-appearance-outline .mat-form-field-outline {
-  bottom: 1.34375em; }
 
 .mat-form-field-appearance-outline .mat-form-field-label {
   top: 1.84375em;
@@ -730,53 +729,33 @@ textarea.cdk-textarea-autosize-measuring {
 .mat-badge-small.mat-badge-below .mat-badge-content {
   bottom: -8px; }
 
-.mat-badge-small.mat-badge-before {
-  margin-left: 16px; }
-  .mat-badge-small.mat-badge-before .mat-badge-content {
-    left: -16px; }
+.mat-badge-small.mat-badge-before .mat-badge-content {
+  left: -16px; }
 
-[dir='rtl'] .mat-badge-small.mat-badge-before {
-  margin-left: 0;
-  margin-right: 16px; }
-  [dir='rtl'] .mat-badge-small.mat-badge-before .mat-badge-content {
-    left: auto;
-    right: -16px; }
+[dir='rtl'] .mat-badge-small.mat-badge-before .mat-badge-content {
+  left: auto;
+  right: -16px; }
 
-.mat-badge-small.mat-badge-after {
-  margin-right: 16px; }
-  .mat-badge-small.mat-badge-after .mat-badge-content {
-    right: -16px; }
+.mat-badge-small.mat-badge-after .mat-badge-content {
+  right: -16px; }
 
-[dir='rtl'] .mat-badge-small.mat-badge-after {
-  margin-right: 0;
-  margin-left: 16px; }
-  [dir='rtl'] .mat-badge-small.mat-badge-after .mat-badge-content {
-    right: auto;
-    left: -16px; }
+[dir='rtl'] .mat-badge-small.mat-badge-after .mat-badge-content {
+  right: auto;
+  left: -16px; }
 
-.mat-badge-small.mat-badge-overlap.mat-badge-before {
-  margin-left: 8px; }
-  .mat-badge-small.mat-badge-overlap.mat-badge-before .mat-badge-content {
-    left: -8px; }
+.mat-badge-small.mat-badge-overlap.mat-badge-before .mat-badge-content {
+  left: -8px; }
 
-[dir='rtl'] .mat-badge-small.mat-badge-overlap.mat-badge-before {
-  margin-left: 0;
-  margin-right: 8px; }
-  [dir='rtl'] .mat-badge-small.mat-badge-overlap.mat-badge-before .mat-badge-content {
-    left: auto;
-    right: -8px; }
+[dir='rtl'] .mat-badge-small.mat-badge-overlap.mat-badge-before .mat-badge-content {
+  left: auto;
+  right: -8px; }
 
-.mat-badge-small.mat-badge-overlap.mat-badge-after {
-  margin-right: 8px; }
-  .mat-badge-small.mat-badge-overlap.mat-badge-after .mat-badge-content {
-    right: -8px; }
+.mat-badge-small.mat-badge-overlap.mat-badge-after .mat-badge-content {
+  right: -8px; }
 
-[dir='rtl'] .mat-badge-small.mat-badge-overlap.mat-badge-after {
-  margin-right: 0;
-  margin-left: 16px; }
-  [dir='rtl'] .mat-badge-small.mat-badge-overlap.mat-badge-after .mat-badge-content {
-    right: auto;
-    left: -8px; }
+[dir='rtl'] .mat-badge-small.mat-badge-overlap.mat-badge-after .mat-badge-content {
+  right: auto;
+  left: -8px; }
 
 .mat-badge-medium .mat-badge-content {
   width: 22px;
@@ -793,53 +772,33 @@ textarea.cdk-textarea-autosize-measuring {
 .mat-badge-medium.mat-badge-below .mat-badge-content {
   bottom: -11px; }
 
-.mat-badge-medium.mat-badge-before {
-  margin-left: 22px; }
-  .mat-badge-medium.mat-badge-before .mat-badge-content {
-    left: -22px; }
+.mat-badge-medium.mat-badge-before .mat-badge-content {
+  left: -22px; }
 
-[dir='rtl'] .mat-badge-medium.mat-badge-before {
-  margin-left: 0;
-  margin-right: 22px; }
-  [dir='rtl'] .mat-badge-medium.mat-badge-before .mat-badge-content {
-    left: auto;
-    right: -22px; }
+[dir='rtl'] .mat-badge-medium.mat-badge-before .mat-badge-content {
+  left: auto;
+  right: -22px; }
 
-.mat-badge-medium.mat-badge-after {
-  margin-right: 22px; }
-  .mat-badge-medium.mat-badge-after .mat-badge-content {
-    right: -22px; }
+.mat-badge-medium.mat-badge-after .mat-badge-content {
+  right: -22px; }
 
-[dir='rtl'] .mat-badge-medium.mat-badge-after {
-  margin-right: 0;
-  margin-left: 22px; }
-  [dir='rtl'] .mat-badge-medium.mat-badge-after .mat-badge-content {
-    right: auto;
-    left: -22px; }
+[dir='rtl'] .mat-badge-medium.mat-badge-after .mat-badge-content {
+  right: auto;
+  left: -22px; }
 
-.mat-badge-medium.mat-badge-overlap.mat-badge-before {
-  margin-left: 11px; }
-  .mat-badge-medium.mat-badge-overlap.mat-badge-before .mat-badge-content {
-    left: -11px; }
+.mat-badge-medium.mat-badge-overlap.mat-badge-before .mat-badge-content {
+  left: -11px; }
 
-[dir='rtl'] .mat-badge-medium.mat-badge-overlap.mat-badge-before {
-  margin-left: 0;
-  margin-right: 11px; }
-  [dir='rtl'] .mat-badge-medium.mat-badge-overlap.mat-badge-before .mat-badge-content {
-    left: auto;
-    right: -11px; }
+[dir='rtl'] .mat-badge-medium.mat-badge-overlap.mat-badge-before .mat-badge-content {
+  left: auto;
+  right: -11px; }
 
-.mat-badge-medium.mat-badge-overlap.mat-badge-after {
-  margin-right: 11px; }
-  .mat-badge-medium.mat-badge-overlap.mat-badge-after .mat-badge-content {
-    right: -11px; }
+.mat-badge-medium.mat-badge-overlap.mat-badge-after .mat-badge-content {
+  right: -11px; }
 
-[dir='rtl'] .mat-badge-medium.mat-badge-overlap.mat-badge-after {
-  margin-right: 0;
-  margin-left: 22px; }
-  [dir='rtl'] .mat-badge-medium.mat-badge-overlap.mat-badge-after .mat-badge-content {
-    right: auto;
-    left: -11px; }
+[dir='rtl'] .mat-badge-medium.mat-badge-overlap.mat-badge-after .mat-badge-content {
+  right: auto;
+  left: -11px; }
 
 .mat-badge-large .mat-badge-content {
   width: 28px;
@@ -856,53 +815,33 @@ textarea.cdk-textarea-autosize-measuring {
 .mat-badge-large.mat-badge-below .mat-badge-content {
   bottom: -14px; }
 
-.mat-badge-large.mat-badge-before {
-  margin-left: 28px; }
-  .mat-badge-large.mat-badge-before .mat-badge-content {
-    left: -28px; }
+.mat-badge-large.mat-badge-before .mat-badge-content {
+  left: -28px; }
 
-[dir='rtl'] .mat-badge-large.mat-badge-before {
-  margin-left: 0;
-  margin-right: 28px; }
-  [dir='rtl'] .mat-badge-large.mat-badge-before .mat-badge-content {
-    left: auto;
-    right: -28px; }
+[dir='rtl'] .mat-badge-large.mat-badge-before .mat-badge-content {
+  left: auto;
+  right: -28px; }
 
-.mat-badge-large.mat-badge-after {
-  margin-right: 28px; }
-  .mat-badge-large.mat-badge-after .mat-badge-content {
-    right: -28px; }
+.mat-badge-large.mat-badge-after .mat-badge-content {
+  right: -28px; }
 
-[dir='rtl'] .mat-badge-large.mat-badge-after {
-  margin-right: 0;
-  margin-left: 28px; }
-  [dir='rtl'] .mat-badge-large.mat-badge-after .mat-badge-content {
-    right: auto;
-    left: -28px; }
+[dir='rtl'] .mat-badge-large.mat-badge-after .mat-badge-content {
+  right: auto;
+  left: -28px; }
 
-.mat-badge-large.mat-badge-overlap.mat-badge-before {
-  margin-left: 14px; }
-  .mat-badge-large.mat-badge-overlap.mat-badge-before .mat-badge-content {
-    left: -14px; }
+.mat-badge-large.mat-badge-overlap.mat-badge-before .mat-badge-content {
+  left: -14px; }
 
-[dir='rtl'] .mat-badge-large.mat-badge-overlap.mat-badge-before {
-  margin-left: 0;
-  margin-right: 14px; }
-  [dir='rtl'] .mat-badge-large.mat-badge-overlap.mat-badge-before .mat-badge-content {
-    left: auto;
-    right: -14px; }
+[dir='rtl'] .mat-badge-large.mat-badge-overlap.mat-badge-before .mat-badge-content {
+  left: auto;
+  right: -14px; }
 
-.mat-badge-large.mat-badge-overlap.mat-badge-after {
-  margin-right: 14px; }
-  .mat-badge-large.mat-badge-overlap.mat-badge-after .mat-badge-content {
-    right: -14px; }
+.mat-badge-large.mat-badge-overlap.mat-badge-after .mat-badge-content {
+  right: -14px; }
 
-[dir='rtl'] .mat-badge-large.mat-badge-overlap.mat-badge-after {
-  margin-right: 0;
-  margin-left: 28px; }
-  [dir='rtl'] .mat-badge-large.mat-badge-overlap.mat-badge-after .mat-badge-content {
-    right: auto;
-    left: -14px; }
+[dir='rtl'] .mat-badge-large.mat-badge-overlap.mat-badge-after .mat-badge-content {
+  right: auto;
+  left: -14px; }
 
 .mat-bottom-sheet-container {
   background: white;
@@ -999,6 +938,9 @@ textarea.cdk-textarea-autosize-measuring {
 
 .mat-checkbox-checkmark-path {
   stroke: #fafafa !important; }
+  @media screen and (-ms-high-contrast: black-on-white) {
+    .mat-checkbox-checkmark-path {
+      stroke: #000 !important; } }
 
 .mat-checkbox-mixedmark {
   background-color: #fafafa; }
@@ -1020,6 +962,14 @@ textarea.cdk-textarea-autosize-measuring {
 
 .mat-checkbox-disabled .mat-checkbox-label {
   color: #b0b0b0; }
+
+@media screen and (-ms-high-contrast: active) {
+  .mat-checkbox-disabled {
+    opacity: 0.5; } }
+
+@media screen and (-ms-high-contrast: active) {
+  .mat-checkbox-background {
+    background: none; } }
 
 .mat-checkbox:not(.mat-checkbox-disabled).mat-primary .mat-checkbox-ripple .mat-ripple-element {
   background-color: rgba(98, 0, 60, 0.26); }
@@ -1068,6 +1018,12 @@ textarea.cdk-textarea-autosize-measuring {
 
 .mat-table {
   background: white; }
+
+.mat-table thead, .mat-table tbody, .mat-table tfoot,
+mat-header-row, mat-row, mat-footer-row,
+[mat-header-row], [mat-row], [mat-footer-row],
+.mat-table-sticky {
+  background: inherit; }
 
 mat-row, mat-header-row, mat-footer-row,
 th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
@@ -1214,7 +1170,8 @@ th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
   .mat-form-field.mat-form-field-invalid .mat-form-field-label .mat-form-field-required-marker {
     color: #ff6e40; }
 
-.mat-form-field.mat-form-field-invalid .mat-form-field-ripple {
+.mat-form-field.mat-form-field-invalid .mat-form-field-ripple,
+.mat-form-field.mat-form-field-invalid .mat-form-field-ripple.mat-accent {
   background-color: #ff6e40; }
 
 .mat-error {
@@ -1638,6 +1595,9 @@ th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
 .mat-stepper-horizontal-line {
   border-top-color: rgba(0, 0, 0, 0.12); }
 
+.mat-sort-header-arrow {
+  color: #757575; }
+
 .mat-tab-nav-bar,
 .mat-tab-header {
   border-bottom: 1px solid rgba(0, 0, 0, 0.12); }
@@ -1663,9 +1623,9 @@ th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
   border-bottom: none;
   border-top: none; }
 
-.mat-tab-group.mat-primary .mat-tab-label:not(.mat-tab-disabled):focus,
-.mat-tab-group.mat-primary .mat-tab-link:not(.mat-tab-disabled):focus, .mat-tab-nav-bar.mat-primary .mat-tab-label:not(.mat-tab-disabled):focus,
-.mat-tab-nav-bar.mat-primary .mat-tab-link:not(.mat-tab-disabled):focus {
+.mat-tab-group.mat-primary .mat-tab-label.cdk-focused:not(.cdk-mouse-focused):not(.mat-tab-disabled),
+.mat-tab-group.mat-primary .mat-tab-link.cdk-focused:not(.cdk-mouse-focused):not(.mat-tab-disabled), .mat-tab-nav-bar.mat-primary .mat-tab-label.cdk-focused:not(.cdk-mouse-focused):not(.mat-tab-disabled),
+.mat-tab-nav-bar.mat-primary .mat-tab-link.cdk-focused:not(.cdk-mouse-focused):not(.mat-tab-disabled) {
   background-color: rgba(208, 179, 197, 0.3); }
 
 .mat-tab-group.mat-primary .mat-ink-bar, .mat-tab-nav-bar.mat-primary .mat-ink-bar {
@@ -1674,9 +1634,9 @@ th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
 .mat-tab-group.mat-primary.mat-background-primary .mat-ink-bar, .mat-tab-nav-bar.mat-primary.mat-background-primary .mat-ink-bar {
   background-color: white; }
 
-.mat-tab-group.mat-accent .mat-tab-label:not(.mat-tab-disabled):focus,
-.mat-tab-group.mat-accent .mat-tab-link:not(.mat-tab-disabled):focus, .mat-tab-nav-bar.mat-accent .mat-tab-label:not(.mat-tab-disabled):focus,
-.mat-tab-nav-bar.mat-accent .mat-tab-link:not(.mat-tab-disabled):focus {
+.mat-tab-group.mat-accent .mat-tab-label.cdk-focused:not(.cdk-mouse-focused):not(.mat-tab-disabled),
+.mat-tab-group.mat-accent .mat-tab-link.cdk-focused:not(.cdk-mouse-focused):not(.mat-tab-disabled), .mat-tab-nav-bar.mat-accent .mat-tab-label.cdk-focused:not(.cdk-mouse-focused):not(.mat-tab-disabled),
+.mat-tab-nav-bar.mat-accent .mat-tab-link.cdk-focused:not(.cdk-mouse-focused):not(.mat-tab-disabled) {
   background-color: rgba(224, 188, 209, 0.3); }
 
 .mat-tab-group.mat-accent .mat-ink-bar, .mat-tab-nav-bar.mat-accent .mat-ink-bar {
@@ -1685,9 +1645,9 @@ th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
 .mat-tab-group.mat-accent.mat-background-accent .mat-ink-bar, .mat-tab-nav-bar.mat-accent.mat-background-accent .mat-ink-bar {
   background-color: white; }
 
-.mat-tab-group.mat-warn .mat-tab-label:not(.mat-tab-disabled):focus,
-.mat-tab-group.mat-warn .mat-tab-link:not(.mat-tab-disabled):focus, .mat-tab-nav-bar.mat-warn .mat-tab-label:not(.mat-tab-disabled):focus,
-.mat-tab-nav-bar.mat-warn .mat-tab-link:not(.mat-tab-disabled):focus {
+.mat-tab-group.mat-warn .mat-tab-label.cdk-focused:not(.cdk-mouse-focused):not(.mat-tab-disabled),
+.mat-tab-group.mat-warn .mat-tab-link.cdk-focused:not(.cdk-mouse-focused):not(.mat-tab-disabled), .mat-tab-nav-bar.mat-warn .mat-tab-label.cdk-focused:not(.cdk-mouse-focused):not(.mat-tab-disabled),
+.mat-tab-nav-bar.mat-warn .mat-tab-link.cdk-focused:not(.cdk-mouse-focused):not(.mat-tab-disabled) {
   background-color: rgba(255, 204, 188, 0.3); }
 
 .mat-tab-group.mat-warn .mat-ink-bar, .mat-tab-nav-bar.mat-warn .mat-ink-bar {
@@ -1696,9 +1656,9 @@ th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
 .mat-tab-group.mat-warn.mat-background-warn .mat-ink-bar, .mat-tab-nav-bar.mat-warn.mat-background-warn .mat-ink-bar {
   background-color: rgba(0, 0, 0, 0.87); }
 
-.mat-tab-group.mat-background-primary .mat-tab-label:not(.mat-tab-disabled):focus,
-.mat-tab-group.mat-background-primary .mat-tab-link:not(.mat-tab-disabled):focus, .mat-tab-nav-bar.mat-background-primary .mat-tab-label:not(.mat-tab-disabled):focus,
-.mat-tab-nav-bar.mat-background-primary .mat-tab-link:not(.mat-tab-disabled):focus {
+.mat-tab-group.mat-background-primary .mat-tab-label.cdk-focused:not(.cdk-mouse-focused):not(.mat-tab-disabled),
+.mat-tab-group.mat-background-primary .mat-tab-link.cdk-focused:not(.cdk-mouse-focused):not(.mat-tab-disabled), .mat-tab-nav-bar.mat-background-primary .mat-tab-label.cdk-focused:not(.cdk-mouse-focused):not(.mat-tab-disabled),
+.mat-tab-nav-bar.mat-background-primary .mat-tab-link.cdk-focused:not(.cdk-mouse-focused):not(.mat-tab-disabled) {
   background-color: rgba(208, 179, 197, 0.3); }
 
 .mat-tab-group.mat-background-primary .mat-tab-header, .mat-tab-group.mat-background-primary .mat-tab-links, .mat-tab-nav-bar.mat-background-primary .mat-tab-header, .mat-tab-nav-bar.mat-background-primary .mat-tab-links {
@@ -1718,9 +1678,9 @@ th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
 .mat-tab-group.mat-background-primary .mat-ripple-element, .mat-tab-nav-bar.mat-background-primary .mat-ripple-element {
   background-color: rgba(255, 255, 255, 0.12); }
 
-.mat-tab-group.mat-background-accent .mat-tab-label:not(.mat-tab-disabled):focus,
-.mat-tab-group.mat-background-accent .mat-tab-link:not(.mat-tab-disabled):focus, .mat-tab-nav-bar.mat-background-accent .mat-tab-label:not(.mat-tab-disabled):focus,
-.mat-tab-nav-bar.mat-background-accent .mat-tab-link:not(.mat-tab-disabled):focus {
+.mat-tab-group.mat-background-accent .mat-tab-label.cdk-focused:not(.cdk-mouse-focused):not(.mat-tab-disabled),
+.mat-tab-group.mat-background-accent .mat-tab-link.cdk-focused:not(.cdk-mouse-focused):not(.mat-tab-disabled), .mat-tab-nav-bar.mat-background-accent .mat-tab-label.cdk-focused:not(.cdk-mouse-focused):not(.mat-tab-disabled),
+.mat-tab-nav-bar.mat-background-accent .mat-tab-link.cdk-focused:not(.cdk-mouse-focused):not(.mat-tab-disabled) {
   background-color: rgba(224, 188, 209, 0.3); }
 
 .mat-tab-group.mat-background-accent .mat-tab-header, .mat-tab-group.mat-background-accent .mat-tab-links, .mat-tab-nav-bar.mat-background-accent .mat-tab-header, .mat-tab-nav-bar.mat-background-accent .mat-tab-links {
@@ -1740,9 +1700,9 @@ th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
 .mat-tab-group.mat-background-accent .mat-ripple-element, .mat-tab-nav-bar.mat-background-accent .mat-ripple-element {
   background-color: rgba(255, 255, 255, 0.12); }
 
-.mat-tab-group.mat-background-warn .mat-tab-label:not(.mat-tab-disabled):focus,
-.mat-tab-group.mat-background-warn .mat-tab-link:not(.mat-tab-disabled):focus, .mat-tab-nav-bar.mat-background-warn .mat-tab-label:not(.mat-tab-disabled):focus,
-.mat-tab-nav-bar.mat-background-warn .mat-tab-link:not(.mat-tab-disabled):focus {
+.mat-tab-group.mat-background-warn .mat-tab-label.cdk-focused:not(.cdk-mouse-focused):not(.mat-tab-disabled),
+.mat-tab-group.mat-background-warn .mat-tab-link.cdk-focused:not(.cdk-mouse-focused):not(.mat-tab-disabled), .mat-tab-nav-bar.mat-background-warn .mat-tab-label.cdk-focused:not(.cdk-mouse-focused):not(.mat-tab-disabled),
+.mat-tab-nav-bar.mat-background-warn .mat-tab-link.cdk-focused:not(.cdk-mouse-focused):not(.mat-tab-disabled) {
   background-color: rgba(255, 204, 188, 0.3); }
 
 .mat-tab-group.mat-background-warn .mat-tab-header, .mat-tab-group.mat-background-warn .mat-tab-links, .mat-tab-nav-bar.mat-background-warn .mat-tab-header, .mat-tab-nav-bar.mat-background-warn .mat-tab-links {
@@ -1839,7 +1799,6 @@ th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
   font-style: normal;
   font-weight: 400; }
 
-/* fallback */
 @font-face {
   font-family: 'Material Icons';
   font-style: normal;
@@ -1866,3 +1825,12 @@ th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
 
 h1, h2, h3, h4, h5, h6 {
   border-bottom: 0px; }
+
+.mat-list {
+  padding-top: 0px !important; }
+
+ng-list-item .mat-list-item:hover {
+  background-color: rgba(0, 0, 0, 0.04) !important; }
+
+ng-list-item .mat-divider {
+  border: 0px; }
