refman skeleton II

--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -2,6 +2,6 @@
   <h1 class="mat-h1">Project Design</h1>
 
   <mat-card class="dashboard-card" >
-
+    <app-reference-box></app-reference-box>
   </mat-card>
 </div>
