--- a/src/app/references-page/references-page.component.css
+++ b/src/app/references-page/references-page.component.css
@@ -23,3 +23,17 @@
 .search-field {
   width: 100%;
 }
+
+
+
+
+
+tr.example-detail-row {
+  height: 0;
+}
+
+
+.example-element-row td {
+  border-bottom-width: 0;
+}
+
