--- a/src/app/references-page/references-page.component.html
+++ b/src/app/references-page/references-page.component.html
@@ -7,11 +7,11 @@
     </mat-form-field>
 
 
-    <table mat-table [dataSource]="datasource_references" class="mat-elevation-z8" class="references-table">
+    <table mat-table [dataSource]="datasource_references" multiTemplateDataRows class="mat-elevation-z8" class="references-table">
 
       <ng-container matColumnDef="index">
-        <th mat-header-cell *matHeaderCellDef> Ref. number </th>
-        <td mat-cell *matCellDef="let i = index"> {{i}} </td>
+        <th mat-header-cell *matHeaderCellDef> Ref. # </th>
+        <td mat-cell *matCellDef="let element"> {{element.index}} </td>
       </ng-container>
 
       <ng-container matColumnDef="shorthand">
@@ -19,14 +19,55 @@
         <td mat-cell *matCellDef="let element"> {{element.shorthand}} </td>
       </ng-container>
 
-      <!-- Name Column -->
-      <ng-container matColumnDef="authors">
-        <th mat-header-cell *matHeaderCellDef> Authors </th>
-        <td mat-cell *matCellDef="let element"> {{element.authors}} </td>
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef> Title </th>
+        <td mat-cell *matCellDef="let element"> <span style="font-weight: bold;">{{element.title}}</span> </td>
+      </ng-container>
+
+      <!--
+export class Reference {
+  public shorthand: string;
+  public authors: string;
+  public title: string;
+  public doi: string;
+  public journal: string;
+  public url: string;
+  public pubDetails: string;
+  public tags: string[];
+}
+      -->
+
+      <ng-container matColumnDef="expandedDetail">
+        <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+          <div [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+            <div class="mat-subheading-1" style="margin-bottom : 0px;">{{element.journal}}</div>
+              <div class="mat-title"  style="margin-bottom : 0px;">{{element.title}}</div>
+            <div class="mat-subheading-1">{{element.authors}}</div>
+            <div class="example-element-description">
+              {{element.abstract}}
+            </div>
+            <div>
+            </div>
+            <p class="mat-caption">{{element.pubDetails}} &mdash; doi:{{element.doi}}</p>
+            <mat-chip-list> Tags:
+              <mat-chip  *ngFor="let tag of element.tags">{{tag}}</mat-chip>
+            </mat-chip-list>
+            <div style="position: relative; right: 5px;">
+              <a href="{{element.url}}" mat-raised-button><mat-icon>open_in_new</mat-icon> Open article page</a>
+            </div>
+
+          </div>
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-row *matRowDef="let element; columns: displayedColumns;"
+          class="example-element-row"
+          [class.example-expanded-row]="expandedElement === element"
+          (click)="expandedElement = element">
+      </tr>
+      <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+
 
     </table>
   </mat-card>
