refman implemented about fully

--- a/src/app/reference-box/reference-box.component.html
+++ b/src/app/reference-box/reference-box.component.html
@@ -1,1 +1,1 @@
-<sup><a style="color: blue;cursor: pointer;"  (click)="openRefBottomSheet()">[{{this.index}}]</a></sup>
+<sup><a style="color: blue;cursor: pointer;"  (click)="openRefBottomSheet()">[{{this.ref.index}}]</a></sup>
