--- a/src/app/references-page/references-page.component.css
+++ b/src/app/references-page/references-page.component.css
@@ -37,3 +37,11 @@ tr.example-detail-row {
   border-bottom-width: 0;
 }
 
+
+tr.example-element-row:not(.example-expanded-row):hover {
+  background: #f5f5f5;
+}
+
+tr.example-element-row:not(.example-expanded-row):active {
+  background: #efefef;
+}
