--- a/src/app/references-page/references-page.component.html
+++ b/src/app/references-page/references-page.component.html
@@ -39,7 +39,7 @@ export class Reference {
 
       <ng-container matColumnDef="expandedDetail">
         <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
-          <div [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+          <div>
             <div class="mat-subheading-1" style="margin-bottom : 0px;">{{element.journal}}</div>
               <div class="mat-title"  style="margin-bottom : 0px;">{{element.title}}</div>
             <div class="mat-subheading-1">{{element.authors}}</div>
@@ -48,13 +48,15 @@ export class Reference {
             </div>
             <div>
             </div>
-            <p class="mat-caption">{{element.pubDetails}} &mdash; doi:{{element.doi}}</p>
-            <mat-chip-list> Tags:
-              <mat-chip  *ngFor="let tag of element.tags">{{tag}}</mat-chip>
-            </mat-chip-list>
-            <div style="position: relative; right: 5px;">
-              <a href="{{element.url}}" mat-raised-button><mat-icon>open_in_new</mat-icon> Open article page</a>
+            <div style="float: right;">
+              <span><a href="{{element.url}}" mat-raised-button><mat-icon>open_in_new</mat-icon> Open article page</a></span>
             </div>
+            <p class="mat-caption">{{element.pubDetails}} &mdash; doi:{{element.doi}} <span><mat-chip-list> Tags:
+                <mat-chip  *ngFor="let tag of element.tags">{{tag}}</mat-chip>
+              </mat-chip-list>
+            </span></p>
+
+
 
           </div>
         </td>
@@ -67,6 +69,7 @@ export class Reference {
           (click)="expandedElement = element">
       </tr>
       <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+
 
 
     </table>
