--- a/src/gops_theme.css
+++ b/src/gops_theme.css
@@ -8,6 +8,7 @@
 /* Theme for the ripple elements.*/
 /* stylelint-disable material/no-prefixes */
 /* stylelint-enable */
+@import url(../node_modules/angular-calendar/css/angular-calendar.css);
 .mat-elevation-z0 {
   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.2), 0px 0px 0px 0px rgba(0, 0, 0, 0.14), 0px 0px 0px 0px rgba(0, 0, 0, 0.12); }
 
@@ -508,9 +509,6 @@ input.mat-input-element {
 
 .mat-ripple {
   overflow: hidden; }
-  @media screen and (-ms-high-contrast: active) {
-    .mat-ripple {
-      display: none; } }
 
 .mat-ripple.mat-ripple-unbounded {
   overflow: visible; }
@@ -521,6 +519,9 @@ input.mat-input-element {
   pointer-events: none;
   transition: opacity, transform 0ms cubic-bezier(0, 0, 0.2, 1);
   transform: scale(0); }
+  @media screen and (-ms-high-contrast: active) {
+    .mat-ripple-element {
+      display: none; } }
 
 .cdk-visually-hidden {
   border: 0;
@@ -598,7 +599,13 @@ input.mat-input-element {
   width: 100%;
   overflow-y: scroll; }
 
-@keyframes cdk-text-field-autofill-start {}@keyframes cdk-text-field-autofill-end {}.cdk-text-field-autofill-monitored:-webkit-autofill {
+@keyframes cdk-text-field-autofill-start {
+  /*!*/ }
+
+@keyframes cdk-text-field-autofill-end {
+  /*!*/ }
+
+.cdk-text-field-autofill-monitored:-webkit-autofill {
   animation-name: cdk-text-field-autofill-start; }
 
 .cdk-text-field-autofill-monitored:not(:-webkit-autofill) {
@@ -1125,6 +1132,10 @@ th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
 .mat-expansion-panel:not(.mat-expanded) .mat-expansion-panel-header:not([aria-disabled='true']).cdk-keyboard-focused, .mat-expansion-panel:not(.mat-expanded) .mat-expansion-panel-header:not([aria-disabled='true']).cdk-program-focused, .mat-expansion-panel:not(.mat-expanded) .mat-expansion-panel-header:not([aria-disabled='true']):hover {
   background: rgba(0, 0, 0, 0.04); }
 
+@media (hover: none) {
+  .mat-expansion-panel:not(.mat-expanded):not([aria-disabled='true']) .mat-expansion-panel-header:hover {
+    background: white; } }
+
 .mat-expansion-panel-header-title {
   color: rgba(0, 0, 0, 0.87); }
 
@@ -1365,15 +1376,6 @@ th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
 .mat-radio-outer-circle {
   border-color: rgba(0, 0, 0, 0.54); }
 
-.mat-radio-disabled .mat-radio-outer-circle {
-  border-color: rgba(0, 0, 0, 0.38); }
-
-.mat-radio-disabled .mat-radio-ripple .mat-ripple-element, .mat-radio-disabled .mat-radio-inner-circle {
-  background-color: rgba(0, 0, 0, 0.38); }
-
-.mat-radio-disabled .mat-radio-label-content {
-  color: rgba(0, 0, 0, 0.38); }
-
 .mat-radio-button.mat-primary.mat-radio-checked .mat-radio-outer-circle {
   border-color: #62003c; }
 
@@ -1400,6 +1402,17 @@ th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
 
 .mat-radio-button.mat-warn .mat-radio-ripple .mat-ripple-element {
   background-color: rgba(255, 110, 64, 0.26); }
+
+.mat-radio-button.mat-radio-disabled.mat-radio-checked .mat-radio-outer-circle,
+.mat-radio-button.mat-radio-disabled .mat-radio-outer-circle {
+  border-color: rgba(0, 0, 0, 0.38); }
+
+.mat-radio-button.mat-radio-disabled .mat-radio-ripple .mat-ripple-element,
+.mat-radio-button.mat-radio-disabled .mat-radio-inner-circle {
+  background-color: rgba(0, 0, 0, 0.38); }
+
+.mat-radio-button.mat-radio-disabled .mat-radio-label-content {
+  color: rgba(0, 0, 0, 0.38); }
 
 .mat-select-content, .mat-select-panel-done-animating {
   background: white; }
