--- a/src/gops_theme.scss
+++ b/src/gops_theme.scss
@@ -1,5 +1,7 @@
 @import '../node_modules/@angular/material/theming';
-// Plus imports for other components in your app.
+
+@import "../node_modules/angular-calendar/css/angular-calendar.css";
+
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
