referenceBox importable in submodules

--- a/src/app/computing-section/computing-section.component.html
+++ b/src/app/computing-section/computing-section.component.html
@@ -2,7 +2,7 @@
   <h1 class="mat-h1">Software</h1>
 
   <mat-card class="dashboard-card" >
-    <a href="http://gops-igem.s3-website.eu-central-1.amazonaws.com/"mat-raised-button><mat-icon>open_in_new</mat-icon> Plasmid Sketcher website</a><br><br>
+    <a target="_blank" href="http://gops-igem.s3-website.eu-central-1.amazonaws.com/"mat-raised-button><mat-icon>open_in_new</mat-icon> Plasmid Sketcher website</a><br><br>
 
     Best viewed on widescreen 1920*1080, else zoom out to have the page in one screen.<br><br>
     <img src="http://2018.igem.org/wiki/images/7/74/T--GO_Paris-Saclay--plasmid_sketcher_screenshot1.png" class="screenshot">
