--- a/src/app/reference-box/reference-sheet.html
+++ b/src/app/reference-box/reference-sheet.html
@@ -24,5 +24,5 @@ export class Reference {
 </mat-chip-list>
 <p>
 <a href="{{this.ref.url}}" mat-raised-button><mat-icon>open_in_new</mat-icon> Open article page</a><span style="position: absolute;
-    right: 15px;"> <a routerLink="references" mat-raised-button><mat-icon>book</mat-icon> Go to references list</a> </span>
+    right: 15px;"> <a href="#/references" mat-raised-button><mat-icon>book</mat-icon> Go to references list</a> </span>
 </p>
