--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 
 
   <span class="fill-toolbar-space"></span>
-  <div >Methotr</div><div style="color:  #ece0e8;">Exit</div>
+  <div >Metho</div><div style="color:  #ece0e8;">Breaker</div>
   <span style="width:0.2em"></span>
   <img style="max-height:100%; width:auto; padding:1em;" src="http://2018.igem.org/wiki/images/c/c0/T--GO_Paris-Saclay--go-ps-white.png"/>
   <span style="width:0.2em"></span>
