--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="grid-container">
-  <h1 class="mat-h1"><span style="color: #62003c;">Methotr</span><span style="color:  red;">Exit</span> : Cleaning hospital effluent since 2018</h1>
+  <h1 class="mat-h1"><span style="color: #62003c;">Metho</span><span style="color:  red;">Breaker</span> : Cleaning hospital effluent since 2018</h1>
 
       <mat-card class="dashboard-card" >
         <mat-card-header>
