--- a/src/app/collaborations/collaborations.component.html
+++ b/src/app/collaborations/collaborations.component.html
@@ -2,6 +2,51 @@
   <h1 class="mat-h1">Collaborations</h1>
 
   <mat-card class="dashboard-card" >
+    <div class="mat-h1">European meetup with the iGEM community</div>
+
+    <div>
+<img class="emeetupimgtall" src="http://2018.igem.org/wiki/images/2/21/T--GO_Paris-Saclay--european_meetup_1.jpg" >
+    <img class="emeetupimg" src="http://2018.igem.org/wiki/images/a/a2/T--GO_Paris-Saclay--european_meetup_2.jpg">
+  We were delighted to participate in the iGEM European meet-up in Munich. There we got the chance to present our project in its earliest stages to:
+
+
+    </div>
+    <div style="clear:both;">
+    <mat-grid-list cols="4" rowHeight="3em" class="teamgrid">
+      <mat-grid-tile
+        *ngFor="let team of team_list"
+        [colspan]="1"
+        [rowspan]="1" class="teamtile">
+        {{team}}
+      </mat-grid-tile>
+    </mat-grid-list>
+      Thanks to this amazing meetup we got the chance to ear about fantastic project happening nearby. It was the first
+      poster session for our team and we finished 2nd. After the meetup we stayed in touch we some of the IGEM teams.
+
+    </div>
+
+    <div class="spacemaker"></div>
+
+    <div class="mat-h1">Parisian meetup</div>
+    The Parisian meetup was the first time we presented our project to all the French teams: Bordeaux, Toulouse, Pasteur,
+    Evry, Grenoble and Sorbonne University. They gave us some amazing feedback about our project and lots of compliments
+    about our presentation. We were blessed to be there, and after this meetup we kept in touch with IGEM Bordeaux,
+    Sorbonne and Grenoble which we were already talking to (more information below).
+    <img class="pmeetup" src="http://2018.igem.org/wiki/images/7/76/T--GO_Paris-Saclay--parisian_meetup.jpg">
+
+    <div class="spacemaker"></div>
+
+    <div class="mat-h1">Sorbonne university</div>
+
+    Sorbonne University/IGEM GO Paris_Saclay is probably the best example of what a real collaboration is. Because our
+    team lacked programmers and designers, they proposed to help us with the coding part of IGEM (which really helped us in
+    creating our wiki), and with the sketching process of our new logo.
+    We, on the other hand, realised that there was no mathematician in their team. Our two mathematicians proposed to
+    work with them on the modelling of their project.
+
+    <img class="pmeetup" src="http://2018.igem.org/wiki/images/4/48/T--GO_Paris-Saclay--sorbonne_collab.jpg">
+
 
   </mat-card>
 </div>
+
